# MeshKernel

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  COPYING  Dockerfile  GridGeom.nuspec  README.md  _averaging_interpolation_8hpp_source.html  _bilinear_interpolation_on_gridded_samples_8hpp_source.html  _bounding_box_8hpp_source.html  _cartesian3_d_point_8hpp_source.html  _casulli_de_refinement_8hpp_source.html  _casulli_refinement_8hpp_source.html  _connect_meshes_8hpp_source.html  _constants_8hpp_source.html  _contacts_8hpp_source.html  _curvilinear_frozen_lines_add_undo_action_8hpp_source.html  _curvilinear_frozen_lines_delete_undo_action_8hpp_source.html  _curvilinear_grid_8hpp_source.html  _curvilinear_grid_algorithm_8hpp_source.html  _curvilinear_grid_create_uniform_8hpp_source.html  _curvilinear_grid_de_refinement_8hpp_source.html  _curvilinear_grid_from_polygon_8hpp_source.html  _curvilinear_grid_from_splines_8hpp_source.html  _curvilinear_grid_from_splines_transfinite_8hpp_source.html  _curvilinear_grid_line_8hpp_source.html  _curvilinear_grid_line_shift_8hpp_source.html  _curvilinear_grid_orthogonalization_8hpp_source.html  _curvilinear_grid_refinement_8hpp_source.html  _curvilinear_grid_smoothing_8hpp_source.html  _curvilinear_parameters_8hpp_source.html  _cut_cell_8hpp_source.html  _definitions_8hpp_source.html  _design.html  _edge_length_property_calculator_8hpp_source.html  _entities_8hpp_source.html  _exceptions_8hpp_source.html  (+405 more)
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  MeshKernel.ppt  MeshKernelClassDiagram.cd  MeshKernelTechnicalDesignDocument.md  conf.py  design.md  index.rst  introduction.md  m-dark+documentation.compiled.css  m-dark.documentation.compiled.css  main_page.md
docs/images/: GridEditorClassDiagram.tif  MeshKernelC++.uxf  coincide_circumcentre.pdf_tex
docs/latex/: GridEditorClassDiagram.cd  GridgeomTechnicalDesignDocument.tex  MeshKernelInC++.ppt  MeshKernelTechnicalDesignDocument.md  gridgeomC++.uxf  gridgeomInC++.ppt
libs/MeshKernel/: CMakeLists.txt
libs/MeshKernelApi/: CMakeLists.txt
poc/undo/: CMakeLists.txt
src/: AlgebraicOperations.cpp  Averaging.cpp  Averaging.hpp  AveragingInterpolation.cpp  AveragingInterpolation.hpp  CMakeLists.txt  CartesianPoint.cpp  Constants.cpp  CurvilinearGrid.hpp  CurvilinearGridFromPolygon.cpp  CurvilinearGridFromPolygon.hpp  CurvilinearGridFromSplines.cpp  CurvilinearGridFromSplines.hpp  CurvilinearGridFromSplinesTransfinite.cpp  CurvilinearGridFromSplinesTransfinite.hpp  CurvilinearMesh.hpp  CurvilinearParametersNative.hpp  Entities.cpp  Entities.hpp  Exceptions.hpp  FlipEdges.cpp  FlipEdges.hpp  GeometryListNative.hpp  Gridgeom.cpp  Gridgeom.hpp  IOperations.hpp  InterpolationParametersNative.hpp  LandBoundaries.cpp  LandBoundaries.hpp  LandBoundaries_copy.cpp  MakeGridParametersNative.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  MeshGeometry.hpp  MeshGeometryDimensions.hpp  MeshKernel.cpp  MeshKernel.hpp  MeshRefinement.cpp  MeshRefinement.hpp  (+37 more)
src/MeshKernel/: AveragingInterpolation.cpp  CMakeLists.txt  ClosestAveragingStrategy.cpp  Contacts.cpp  CurvilinearGrid.cpp  CurvilinearGridAlgorithm.cpp  CurvilinearGridCreateUniform.cpp  CurvilinearGridDeRefinement.cpp  CurvilinearGridFromPolygon.cpp  CurvilinearGridFromSplines.cpp  CurvilinearGridFromSplinesTransfinite.cpp  CurvilinearGridLine.cpp  CurvilinearGridLineShift.cpp  CurvilinearGridOrthogonalization.cpp  CurvilinearGridRefinement.cpp  CurvilinearGridSmoothing.cpp  CutCell.cpp  FlipEdges.cpp  InverseWeightedAveragingStrategy.cpp  LandBoundaries.cpp  MaxAveragingStrategy.cpp  Mesh.cpp  Mesh1D.cpp  Mesh2D.cpp  MeshRefinement.cpp  MinAbsAveragingStrategy.cpp  MinAveragingStrategy.cpp  Network1D.cpp  Operations.cpp  OrthogonalizationAndSmoothing.cpp  Orthogonalizer.cpp  Polygons.cpp  RTree.cpp  SimpleAveragingStrategy.cpp  Smoother.cpp  SpatialTrees.cpp  Splines.cpp  TriangulationInterpolation.cpp
src/MeshKernelApi/: CMakeLists.txt  MeshKernel.cpp  Utils.cpp
src/tests/: AveragingTests.cpp  CurvilinearGridFromPolygon.cpp  CurvilinearGridFromSplinesTest.cpp  CurvilinearGridFromSplinesTransfiniteTest.cpp  CurvilinearGridPolygon.cpp  FlipEdgesTest.cpp  FunctionsTest.cpp  GridGeomTest.cpp  GridGeomTest.hpp  LandBoundaryTest.cpp  MakeMeshes.cpp  MeshReader.cpp  MeshRefinementTest.cpp  MeshTest.cpp  OrthogonalizationTest.cpp  PolygonTest.cpp  SampleFileReader.cpp  SpatialTreesTest.cpp  SplineTest.cpp  TriangleInterpolationTest.cpp
tests/: 2SplinesCurved.spl  CMakeLists.txt  FindFaces.pol  FourByFourWithFourSamples.nc  FourSplinesBox.spl  MakeMeshInPolygon.pol  OffsetAPolygonTest.pli  OrthogonalCurvilinearMeshTwoCrossingSecond.spl  OrthogonalCurvilinearMeshTwoCrossings.spl  OrthogonalizationSmallTriangularGridWithPolygon.pol  SamplesForRefinementFourByFourMesh.xyz  SamplesToTriangulate.xyz  SevenSplines.spl  SmallTriangularGrid_net.nc  SmallTriangularGrid_oneCrossingLandBoundaries.ldb  SmallTriangularGrid_twoCrossingLandBoundaries.ldb  TestOrthogonalizationLargeTriangularGrid_net.nc  TestOrthogonalizationMediumTriangularGrid_net.nc  TestOrthogonalizationSmallTriangularGrid_landBoundary.ldb  ThreeNodesSpline.spl  TwoCrossingSplines.spl  refineRectangularMeshPolygonTest.pol  refineSmallTriangularMeshPolygonTest.pol
tests/AveragingInterpolationTests/: sample_grid_coarse_net.nc
tests/FlipEdgesTests/: FiveSplines.spl
tests/MeshRefinementTests/: FourByFourWithFourSamples.nc  RefineBasedOnPolygonThreeByThree.pol  SamplesForRefinementFourByFourMeshSpherical.xyz  SevenBySevenBasedOnLevels.xyz  SmallTriangularMeshSamplesForRefinement.xyz  ThreeByThreeOnLevels.nc  ThreeByThreeOnLevels.xyz  WindowedSamplesForMeshRefinement.xyz
tests/RemoveSmallFlowEdges/: remove_small_flow_edges_net.nc
tests/TriangleInterpolationTests/: SphericalCutted.nc  SphericalCutted.xyz  inTestTriangleInterpolation.xyz  simple_grid_net.nc
tests/api/: ApiTest.cpp  CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/build_win/: CMakeCache.txt
tools/: CMakeLists.txt  download_build_wrapper.py  download_sonar_tools.py
(+1273 files in other folders)
